[package]
name = "turnclient"
version = "0.3.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
description = "Simple TURN client for UDP - traverse even strict NAT; async only"
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/rust-turnclient"
keywords = ["stun", "turn", "rfc5766", "nat"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
stun_codec = "0.1.10"
bytecodec = "0.4.11"
rand = "0.8"
futures = { version = "0.3", optional = false }
tokio = { version = "1", optional = false, features=["net","time"] }
trackable = "0.2"
fnv = "1.0.6"
slab_typesafe = "0.1.3"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", optional = false, features=["rt","macros"] }
tokio-util = { version = "0.6.7", features=["codec","net"]}
futuristic = "0.3.0"
either = "1.5.0"
